# nostr-activitypub-amb-bridge

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/peertube_to_amb/: __init__.py  cli.py  fetcher.py  licence_map.py  mapper.py  publisher.py
src/peertube_to_amb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_fetcher.py  test_licence_map.py  test_mapper.py  test_publisher.py
